# ComputeHive

./: .gitignore  README.md
.github/workflows/: main.yml
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml
client/src/: main.ts  styles.css
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/src/: lib.rs
coordinator/cmd/server/: main.go
coordinator/internal/config/: config.go
coordinator/internal/grpc/: handlers.go  server.go
coordinator/internal/scheduler/: scheduler.go
coordinator/internal/store/: redis.go
coordinator/pkg/pb/: client.pb.go  client_grpc.pb.go  worker.pb.go  worker_grpc.pb.go
infra/: go.mod
shared/proto/: client.proto  worker.proto
worker/: go.mod  go.sum
worker/cmd/worker/: main.go
worker/internal/artifact/: fetcher.go  fetcher_test.go
worker/internal/config/: config.go
worker/internal/domain/: job.go  worker.go
worker/internal/executor/: docker.go  docker_test.go
worker/internal/output/: manager.go  manager_test.go
worker/internal/resources/: reporter.go
worker/internal/store/: redis.go
worker/internal/worker/: agent.go
