[package]
name = "computehive"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "computehive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
tonic-build = "0.12"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
dotenvy = "0.15"
flate2 = "1"
hmac = "0.12"
redis = "0.32"
reqwest = { version = "0.13", features = ["blocking"] }
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
